Fix wrapping in footer

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -14,7 +14,7 @@
 		margin: 0 0 (_size(element-margin) * 1.5) (_size(element-margin) * -1);
 
 		> * {
-			width: calc(50% - #{_size(element-margin)});
+			// width: calc(50% - #{_size(element-margin)});
 			margin-left: _size(element-margin);
 		}
 
